# newslens

./: .env.example  .gitignore  FROZEN-FABLE-README.md  NOTES-M2.md  PREFLIGHT.md  README.md  SETUP.md  pyproject.toml  sources.yaml
adr/: 0001-schema-three-tables-plus-history.md  0002-doctor-stdlib-first.md  0003-m2-ingestion-decisions.md  0004-m3-ranking-decisions.md  0005-m4-memory-decisions.md  0006-memory-lifecycle-v2.md  0007-m5-writer-decisions.md  0008-m6-voice-and-editor.md  0009-m6-fixloop-text-quality.md  0010-web-ui-serve-architecture.md  0011-diagnose-instrument-and-doctor-ruling.md  0012-analysis-organ-m2.md  0013-nl77-cold-start-backgrounder.md  0014-provider-seam-b1.md  0015-subscription-lane-b3.md  0016-b4-writer-opus-analyst-sonnet-caching.md  0017-nl17-m1-altitude-resolver.md
migrations/: 0001_initial_schema.sql  0002_briefings_date_format.sql  0003_ranking_runs.sql  0004_ranking_runs_append_only.sql  0005_memory_topic_unique.sql  0006_memory_lifecycle_v2.sql  0007_consumption_events.sql  0008_analysis_briefs.sql  0009_analysis_append_only_and_retrieval.sql  0010_thread_memory.sql  0011_consumption_view_events.sql  0012_thread_delta_supersession.sql  0013_watch_items.sql  0014_thread_delta_provenance.sql  0015_thread_closures.sql  0016_concept_explanations.sql  0017_thread_baselines.sql  0018_thread_state_arc_line.sql  0019_memory_follow_altitude.sql  0020_follow_altitude_events.sql  0021_memory_follow_origin.sql
prompts/: analysis_brief.txt  analysis_sonar.txt  discovery_query.txt  doctor_sonar_ping.txt  editor_pass.txt  follow_altitude.txt  narrative_variant_a.txt  narrative_variant_b.txt  rank_select.txt  script_adapt.txt  thread_baseline.txt  thread_state.txt
scripts/: battery  doctor  follow-altitude  setup_tts  (+1 more)
(+141 files in other folders)
